# tsp

./: CMakeLists.txt  README.md
config/: params.json
scripts/: benchmark.py  generate_tests.py  visualize.py
src/: GeneticSolver.cpp  GeneticSolver.hpp  Problem.cpp  Problem.hpp  Solution.hpp  Solver.hpp  main.cpp
tests/: test_50.txt
